Commit demo code